# libzerocoin

./: CMakeLists.txt  README.md
libzerocoin/: CMakeLists.txt  Denominations.cpp  Denominations.h
test/: CMakeLists.txt  test_zerocoin.cpp
